--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="gameBoard" id="gameBoard">
     </div>
     <div class="menu" id="menu">
-        <button id="resetButton">Start Over</button>
+        <!-- <button id="resetButton">Start Over</button> -->
     </div>
 
     <script src="./app.js"></script>
